src/test/run-pass/native-no-abi.rs
// ABI is cdecl by default

native mod rustrt {
    fn unsupervise();
}

fn main() {
    rustrt::unsupervise();
}