src/test/compile-fail/import-from-none.rs
// error-pattern:at least one import is required
import spam::{};

mod spam {
}

fn main() {
}